[build-system]
# We must use a version older than 70.0.0 to keep pkg_resources available
requires = ["setuptools<70.0.0", "wheel"] 
build-backend = "setuptools.build_meta"

[project]
name = "Omemdb"
version = "3.1.0"
description = "Omemdb"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "setuptools",
    "wheel",
]
